JoinApi/Deployment/Production/Azure/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose-azure-docker-linux-net8.yml convert
    kompose.service.expose: joincloud.digicorp.it:27017
    kompose.service.type: NodePort
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose-azure-docker-linux-net8.yml convert
        kompose.service.expose: joincloud.digicorp.it:27017
        kompose.service.type: NodePort
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
              #io.kompose.network/node-network: "true"
        io.kompose.service: mongodb
    spec:
      containers:
        - image: mongo:latest
          imagePullPolicy: Always
          name: mongodb
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: mongodata
      imagePullSecrets:
      - name: regcred
      hostname: mongodb
      restartPolicy: Always
      volumes:
        - name: mongodata
          persistentVolumeClaim:
            claimName: mongodata
status: {}
